client com estruturas para vários serveres